app/scripts/strict-mtls.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
  name: mesh-wide-mtls
  namespace: "istio-system"
spec:
  mtls:
    mode: STRICT
