app/scripts/balance-reader-traffic.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: balance-reader
spec:
  hosts:
  - ledger-monolith
  http:
  - match:
    - uri:
        prefix: /balances
      method: 
        exact: GET
      port: 8080
    route:
    - destination:
        host: ledger-monolith
        port: 
          number: 8080
      weight: 50
    - destination:
        host: balancereader
        port: 
          number: 8080
      weight: 50
