app/scripts/configure-mtls.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: frontend-mtls
spec:
  host: frontend
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
