app/scripts/transaction-reader-traffic.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: transaction-history
spec:
  hosts:
  - ledger-monolith
  http:
  - match:
    - uri:
        prefix: /transactions
      method: 
        exact: GET
      port: 8080
    route:
    - destination:
        host: ledger-monolith
        port: 
          number: 8080
      weight: 50
    - destination:
        host: transactionhistory
        port: 
          number: 8080
      weight: 50
